--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/davidlpc1/videomaker-filipedeschamps#readme",
   "dependencies": {
     "algorithmia": "^0.3.10",
+    "googleapis": "^66.0.0",
     "readline-sync": "^1.4.10",
     "sbd": "^1.0.18",
     "watson-developer-cloud": "^4.0.1"
